更新HtmlUnit依赖；修改了取消任务的逻辑；调整了界面布局；